ui(fb): step title alignment fixed

--- a/src/components/fb2/CreateFidelityBond.module.css
+++ b/src/components/fb2/CreateFidelityBond.module.css
@@ -111,3 +111,7 @@
 .subTitle {
   font-size: 0.8rem;
 }
+
+.stepHeader {
+  width: 8rem;
+}
